<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="vertical"
    	android:gravity="center_horizontal"
    	android:layout_marginTop="40dp"
    	android:layout_marginLeft="20dp"
    	android:layout_marginRight="20dp"
    	>
        
	    <ImageView 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="40dp"
		    android:src="@drawable/vish_logo"
		    />
	    
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="20dp"
	        android:text="@string/main_instructions"
	        android:gravity="center"
	        />
	    
	    <Button
	        android:id="@+id/imageButton"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="20dp"
	        android:text="@string/capture_image" 
	        />
	    
	    <Button
	        android:id="@+id/videoButton"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="20dp"
	        android:text="@string/capture_video" 
	        />
	    
	    <Button
	        android:id="@+id/galleryButton"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="20dp"
	        android:text="@string/gallery" 
	        />
	    
	</LinearLayout>
    
</ScrollView>