<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="vertical"
	   	android:gravity="center_horizontal"
	   	android:layout_marginTop="40dp"
	   	android:layout_marginLeft="35dp"
	   	android:layout_marginRight="35dp"
        >
    
	    <ImageView 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="40dp"
		    android:src="@drawable/logo"
		    />
	    
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="20dp"
	        android:text="@string/upload_document_instructions"
	        android:gravity="center"
	        />
	    
	    <EditText 
	        android:id="@+id/documentTitle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="20dp"
			android:hint="@string/title"
			android:inputType="text"
			android:imeOptions="actionNext"
	        />
	
	    <EditText 
	        android:id="@+id/documentDescription"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="20dp"
			android:hint="@string/description"
			android:inputType="text"
			android:imeOptions="actionDone"
	        />
	    
	<!--     <EditText  -->
	<!--         android:id="@+id/documentTags" -->
	<!-- 		android:layout_width="match_parent" -->
	<!-- 		android:layout_height="wrap_content" -->
	<!-- 		android:layout_marginBottom="20dp" -->
	<!-- 		android:hint="@string/tags" -->
	<!--         /> -->
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	   		android:orientation="horizontal"
	        >
	        <Button
	            android:id="@+id/uploadDocumentCancelButton"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/button_cancel" 
	            />
	        <Button
	            android:id="@+id/uploadDocumentOkButton"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/button_ok" 
	            />
	    </LinearLayout>
	    
	</LinearLayout>

</LinearLayout>